--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "blockchain-addressbook": "^0.52.11",
     "date-fns": "^4.1.0",
     "escape-string-regexp": "^5.0.0",
+    "ethers": "^6.13.5",
     "i18next": "^20.6.1",
     "lodash-es": "^4.17.21",
     "p-queue": "^8.1.0",
